# price_checker

./: .env.example  .env.exemple  .gitignore  API_CONTEXT.md  README.md  dump_2026.04.07.json  dump_2026.04.08.json  dump_2026.04.10.json  main.py  pyproject.toml  requirements.txt
api/: deps.py
api/routes/: produto.py
core/: config.py
data/: price_checker.db
db/: boostrap.py  database.py  session.py
etl/: dump.py  loader.py  query.sql  query_loader.py
etl/queries/: produto.sql
logs/: app.log.2026-04-22  app.log.2026-04-24  error.log.2026-04-22  etl.log.2026-04-24
models/: produto.py
price_checker/: main.py
price_checker/api/: deps.py
price_checker/core/: config.py  logging_config.py
price_checker/db/: bootstrap.py  database.py  session.py
price_checker/domain/: enums.py
price_checker/etl/: dto.py  dump.py  extract.py  interfaces.py  load.py  loader.py  postgres_loader.py  run_etl.py  transform.py
price_checker/models/: cache_status.py  produto.py  usuario.py
price_checker/repositories/: interfaces.py  produto_repository.py
price_checker/schemas/: bi_schema.py  produto_schema.py  sync_schema.py  usuario_schema.py
price_checker/services/: produto_service.py
repositories/: produto.py
schemas/: schemas.py
tests/: test_produto.py
tests/api/: conftest.py  test_api.py  test_bi_endpoints.py
tests/etl/: test_transform.py
tests/models/: test_produto_model.py
tests/schemas/: test_produto_schema.py
tests/services/: test_auth_service.py  test_produto_service.py
tests/utils/: test_codigo.py  test_security.py
utils/: codigo.py
(+43 files in other folders)
