[project]
name = "price-checker"
version = "0.1.0"
description = "API para controle de precos"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "sqlalchemy",
    "uvicorn[standard]",
    "pydantic-settings",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "bcrypt<4.2",
    "psycopg2>=2.9.11",
    "pytest>=9.0.3",
    "python-multipart",
]

[tool.setuptools]
packages = ["price_checker"]