[project]
name = "price-checker"
version = "0.1.0"
description = "API para controle de precos"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "sqlalchemy",
    "uvicorn[standard]",
    "pydantic-settings",
    "PyJWT[cryptography]",
    "bcrypt",
    "psycopg2>=2.9.11",
    "pytest>=9.0.3",
    "python-multipart",
    "pandas>=3.0.2",
    "openpyxl>=3.1.5",
]

[tool.setuptools]
packages = ["price_checker"]
